tests/testcases/errors/BCE0020-1.boo
"""
BCE0020-1.boo(7,14): BCE0020: 'Person.Name' cannot be used without an instance. 
"""
class Person:
	public Name as string
	
print(Person.Name)
